--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+src/.vscode/extensions.json
+src/.vscode/launch.json
+src/.vscode/settings.json
+src/.vscode/tasks.json
