--- a/src/package.json
+++ b/src/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "src",
-  "type": "module",
+  "name": "",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/src/functions/*.js",
   "scripts": {
-    "start": "func start",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "clean": "rimraf dist",
+    "prestart": "npm run clean && npm run build",
+    "start": "func start --verbose",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
-    "axios": "^1.6.2",
-    "ffmpeg-static": "^5.2.0",
+    "@anzp/azure-function-multipart": "^3.1.0",
+    "@azure/functions": "^4.1.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/ffmpeg-static": "^3.0.3",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/parse-multipart": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
-    "node-fetch": "^3.3.2"
+    "parse-multipart": "^1.0.4"
   },
-  "devDependencies": {},
-  "main": "src/functions/*.js"
+  "devDependencies": {
+    "@types/node": "20.x",
+    "azure-functions-core-tools": "^4.x",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.3"
+  }
 }
