--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "src",
+  "name": "node_js_functions",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/functions/*.js",
