Revert "Update catalogs"
This reverts commit 679858144daa56f1f8071666cacfd208f7e13034.

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "node_js_functions",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/functions/MergeAudio/*.js",
+  "main": "dist/src/functions/*.js",
   "scripts": {
     "build": "tsc && cp src/functions/function.json dist/src/functions/",
     "watch": "tsc -w",
