--- a/src/package.json
+++ b/src/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "node_js_functions",
+  "name": "src",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "dist/src/functions/*.js",
   "scripts": {
-    "build": "tsc && cp src/functions/function.json dist/src/functions/",
-    "watch": "tsc -w",
-    "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
-    "start": "func start --verbose",
+    "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
     "@anzp/azure-function-multipart": "^3.1.0",
-    "@azure/functions": "^4.1.0",
+    "@azure/functions": "^4.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@types/ffmpeg-static": "^3.0.3",
-    "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/parse-multipart": "^1.0.2",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
+    "axios": "^1.6.2",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "node-fetch": "^3.3.2",
     "parse-multipart": "^1.0.4"
   },
-  "devDependencies": {
-    "@types/node": "20.x",
-    "azure-functions-core-tools": "^4.x",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.3"
-  }
+  "main": "src/functions/*.js"
 }
