--- a/.github/workflows/main_ainewsnodejsfunctionset.yml
+++ b/.github/workflows/main_ainewsnodejsfunctionset.yml
@@ -30,7 +30,6 @@ jobs:
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
-          npm install fluent-ffmpeg ffmpeg-static axios
           npm run build --if-present
           npm run test --if-present
           popd
@@ -39,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/dist
+          path: .
 
   deploy:
     runs-on: windows-latest
