--- a/src/package.json
+++ b/src/package.json
@@ -10,10 +10,9 @@
   "dependencies": {
     "@anzp/azure-function-multipart": "^3.1.0",
     "@azure/functions": "^4.0.0",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@ffprobe-installer/ffprobe": "^2.1.2",
     "axios": "^1.6.2",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^3.3.2",
     "parse-multipart": "^1.0.4"
