--- a/.github/workflows/main_ainewsnodejsfunctionset.yml
+++ b/.github/workflows/main_ainewsnodejsfunctionset.yml
@@ -14,6 +14,31 @@ env:
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
+  cleanup_old_artifacts:
+      runs-on: ubuntu-latest
+      needs: deploy
+      permissions:
+        contents: read
+        actions: write
+      steps:
+        - name: Delete Old Artifacts
+          uses: actions/github-script@v6
+          with:
+            script: |
+              const res = await github.rest.actions.listArtifactsForRepo({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+              })
+  
+              res.data.artifacts
+                .forEach(({ id }) => {
+                  github.rest.actions.deleteArtifact({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    artifact_id: id,
+                  })
+                })
+                
   build:
     runs-on: windows-latest
     steps:
