--- a/.github/workflows/main_ainewsnodejsfunctionset.yml
+++ b/.github/workflows/main_ainewsnodejsfunctionset.yml
@@ -64,6 +64,7 @@ jobs:
     
   cleanup_old_artifacts:
     runs-on: ubuntu-latest
+    needs: deploy
     permissions:
       contents: read
       actions: write
