--- a/.github/workflows/main_ainewsnodejsfunctionset.yml
+++ b/.github/workflows/main_ainewsnodejsfunctionset.yml
@@ -68,6 +68,7 @@ jobs:
     - name: Delete old artifacts
       uses: geekyeggo/delete-artifact@v4
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         name: |
           artifact-*
           binary-file
