--- a/.github/workflows/main_ainewsnodejsfunctionset.yml
+++ b/.github/workflows/main_ainewsnodejsfunctionset.yml
@@ -69,7 +69,4 @@ jobs:
       uses: geekyeggo/delete-artifact@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        name: |
-          artifact-*
-          binary-file
-          output
+        name: '*'
