--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,7 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^3.3.2",
-    "parse-multipart": "^1.0.4"
+    "parse-multipart-data": "^1.5.0"
   },
   "main": "src/functions/*.js"
 }
